--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#00FFFF" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://HistoryTimeline.zhiyan114.repl.co">
+    <meta property="og:site_name" content="History Timeline">
+    <meta property="og:title" content="History Timeline">
+    <meta property="og:description" content="History Timeline stuff lol">
+    <meta name="description" content="History Timeline stuff lol">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>History Timeline</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
